About dialog: version and build date injected from maven properties. Fixed exported file extension (rdf -> txt). Some minor refactoring.
git-svn-id: http://chianti.ucsd.edu/svn/csplugins/trunk/toronto/clopes/mcode@26746 0ecc0d97-ab19-0410-9704-bfe1a75892f5